# auf-llm

./: .gitignore  dependencies.py  main.py  pyproject.toml  settings.py
ast_utils/: get_by_tree_sitter.py  py_tree_sitter_json_extension.py
count_variables_task/: base.py  config.py  generate_dirty_data.py  hugging-face-result.txt  hugging_face.py  models.py  parsers.py  result.txt  results.py  variable_counter.py
count_variables_task/data/: algorithm_results.json  dirty_data.txt  gigachat_w_json_ast_results.json  gigachat_w_json_ast_results_explain_var.json  gigachat_w_sexp_ast_results.json  gigachat_w_sexp_ast_results_explain_var.json  gigachat_wo_ast_results.json
count_variables_task/hugging-face-data/: algorithm_results.json  gigachat_w_json_ast_results.json  gigachat_w_sexp_ast_results.json  gigachat_wo_ast_results.json
executors/: ccode_llama.py  gigachat.py  interface.py  phi_mini.py  yandexgpt.py
framework/: enums.py  models.py
framework/data/: loader.py  parser.py
framework/tasks/cyclomatic_complexity/: case_results.py  cases.py  messages.py  reports.py
framework/tasks/cyclomatic_complexity/data/: phi_mini_code_w_sexp_ast_java.json  phi_mini_code_w_sexp_ast_python.json  phi_mini_only_code_java.json  phi_mini_only_code_python.json  phi_mini_only_sexp_ast_java.json  phi_mini_only_sexp_ast_python.json  yandex_gpt_lite_code_w_sexp_ast_java.json  yandex_gpt_lite_code_w_sexp_ast_python.json  yandex_gpt_lite_only_code_java.json  yandex_gpt_lite_only_code_python.json  (+2 more)
framework/utils/: ast.py
model_executors/: gigachat.py
(+6 files in other folders)
